# shellguard

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
examples/: demo.sh
shellguard/: __init__.py  __main__.py  audit.py  cli.py  history.py  recorder.py  replay.py  report.py  scanner.py  storage.py
